--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="Haikyuu.ico">
+  <meta name="description" content="Star's Website ">
+  <meta name="author" content="862228961">
 
-  <title>John Doe - Business Administration</title>
+  <title> Estrella Santamaria-Biology </title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Estrella Santamaria</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/estrellasantamaria.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Estrella Santamaria
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Retail Sales Professional</div>
+        <p class="lead mb-4">Customer-focused Retail Sales professional with solid understanding of retail dynamics and customer service. <br><br>
 
-        Enter bio here<br><br>
+        Demonstrated record of exceeding revenue targets by leveraging communication skills and sales expertise. <br><br>
 
-        Enter bio here
+        Responsible retail professional with excellent sales, service and interpersonal skills. Committed to making every customer feel welcome and assist with any need. Efficiently skilled at connecting with people and promoting products. Open and positive communicator with calm and level-headed approach to managing routine needs and meeting special challenges.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
-            <i class="fab fa-linkedin-in"></i>
+          <a target="_blank" id="socialicon-1" href="https://www.instagram.com/lil_starr27/">
+            <i class="fab fa-Instagram"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/estrellasantamaria">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/LilStarr2727">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:esant073@ucr.edu.">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -88,52 +88,56 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
-        <h2 class="mb-5">Experience</h2>
+        <h2 class="mb-5"> Retail Store Ambassador</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
             <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <div class="subheading mb-3"><a target="_blank" href=" Retail Store Ambassador">Goodwill Southern California </a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Was trained to assist customers and provide positive and professional customer service<br> 
+              • Maintaining the stores cleanliness, while maintaining the order and safety of the store
+(includes daily sweeping and mopping of the store and other related tasks) <br>
+              • Head/Back-Up cash registering <br>
+              • Stocking/Restocking and rotating merchandise <br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">JULY 2019 - SEPTEMBER 2020</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0"> Teacher Assistant </h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.fentoncharter.net/">Fenton Elementary Internship </a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Worked under the supervision of a licensed teacher and helped with materials and lessons taught.<br>
+              • One-on-one reinforced lessons with individual students <br>
+              • Providing general and emotional support for students, licensed teacher, and other assitance. <br>
+              • Prepared lessons, materials and future assignments for students. This includes cutting, folding, printing, editing and typing different documents for future days. <br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">AUGUST 2016 - JUNE 2017</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Food and Beverage Hostess </h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.georgiossportsbarpizza.com/#/">Georgios Sports Bar & Pizzeria </a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
-
+            • Assisted chef's with meal prep for daily meals, following strict sanitation and food handling guidelines<br>
+            • Worked with other Hostess to update cleaning protocols and increase aide efficiency <br>
+            • Managed guest expectations by relaying information regarding hours, wait times and specials.<br>
+            • Operated the cash register, collected payments and provided accurate change.<br>
+            • Scheduled reservations and notified servers and managers of large groups to prepare seating in advance.<br>
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">AUGUST 2017 - JUNE 2018</span>
           </div>
         </div>
 
@@ -151,55 +155,44 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <h3 class="mb-0">University of California- Riverside</h3>
+            <div class="subheading mb-3">Bachelor of Science in Biology</div>
+            <div>Pre-Med Track</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2020 - Current</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <h3 class="mb-0">Arleta High School</h3>
+            <div class="subheading mb-3">High School Graduate</div>
+            <div>Valedictorian</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">August 2018-June 2020</span>
           </div>
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
-
-      </div>
-    </section>
 
     <hr class="m-0">
 
     <section class="resume-section p-1 p-lg-5 d-flex align-items-center" id="portfolio">
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
-        <center>
-            <img src="img/image2.jpeg" width="500px">
-        </center>
+<center>
+    <img src="img/IMG_0869.JPG" width="500px"> 
+    <img src="img/IMG_2454.JPG" width="500px"><br>
+    <img src="img/IMG_4512.jpeg" width="500px">
+    <img src="img/IMG_4290.jpeg" width="500px"><br>
+</center>
       </div>
     </section>
 
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Estrlla Santamaria</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
